--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     "start": "webpack --config webpack.config.js"
   },
   "devDependencies": {
+    "css-loader": "^2.1.1",
+    "node-sass": "^4.11.0",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
     "webpack": "^4.30.0",
     "webpack-cli": "^3.3.0"
   }
