--- a/package.json
+++ b/package.json
@@ -8,14 +8,17 @@
   "license": "ISC",
   "private": false,
   "scripts": {
-    "start": "webpack --config webpack.config.js"
+    "start": "webpack --config webpack.dev.js --open",
+    "build": "webpack --config webpack.prod.js"
   },
   "devDependencies": {
     "css-loader": "^2.1.1",
+    "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.11.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "webpack": "^4.30.0",
-    "webpack-cli": "^3.3.0"
+    "webpack-cli": "^3.3.0",
+    "webpack-merge": "^4.2.1"
   }
 }
