--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "build": "webpack --config webpack.prod.js"
   },
   "devDependencies": {
+    "clean-webpack-plugin": "^2.0.1",
     "css-loader": "^2.1.1",
     "file-loader": "^3.0.1",
     "html-loader": "^0.5.5",
